# Dynamic_lib_CMake

./: CMakeLists.txt
DynLib/: Header.h  Source.cpp
LibTest/: LibTest.cpp
